<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            layout="@layout/main_toolbar"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="220dp"
            android:fontFamily="@font/elsie"
            android:gravity="center"
            android:text="@string/kentisbury_grange"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/emilys_candy"
            android:padding="10dp"
            android:text="@string/inspired_lodges"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:padding="10dp"
            android:fontFamily="@font/emilys_candy"
            android:text="@string/Description"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/title_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:fontFamily="@font/emilys_candy"
            android:text="Visit Us"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Address"
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:fontFamily="@font/emilys_candy"
            android:padding="10dp"
            android:text="@string/address"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <RelativeLayout
    android:layout_width="match_parent"
      android:layout_height="189dp"
     android:id="@+id/layout1">
      <include
           layout="@layout/main_toolbar"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="58dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/hotel" />

    </RelativeLayout>
<RelativeLayout
android:background="@color/white"
android:layout_gravity="start"
android:layout_height="match_parent"
android:layout_width="300dp">

<include layout="@layout/main_nav_drawer" />
</RelativeLayout>
    </androidx.drawerlayout.widget.DrawerLayout>