<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include layout="@layout/main_toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:paddingTop="12dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="336dp"
                android:layout_height="69dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="31dp"
                android:layout_marginLeft="31dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/rounded_corner"
                android:drawablePadding="20dp"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:inputType="textShortMessage"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <!--    <EditText-->
            <!--        android:id="@+id/editTextPhone"-->
            <!--        android:layout_width="343dp"-->
            <!--        android:layout_height="66dp"-->
            <!--        android:layout_alignParentStart="true"-->
            <!--        android:layout_alignParentLeft="true"-->
            <!--        android:layout_centerHorizontal="true"-->
            <!--        android:layout_marginStart="30dp"-->
            <!--        android:layout_marginLeft="30dp"-->
            <!--        android:layout_marginTop="200dp"-->
            <!--        android:background="@drawable/rounded_corner"-->
            <!--        android:drawablePadding="20dp"-->
            <!--        android:fontFamily="@font/amarante"-->
            <!--        android:gravity="center"-->
            <!--        android:textColor="@color/black"-->
            <!--        android:textColorHint="@color/black"-->
            <!--        android:textSize="20sp"-->
            <!--        android:textStyle="bold" />-->

            <TextView
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="140dp"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:inputType="number"
                android:paddingTop="12dp"
                android:text="@string/mobile"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="343dp"
                android:layout_height="66dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="200dp"
                android:background="@drawable/rounded_corner"
                android:drawablePadding="20dp"
                android:fontFamily="@font/cabin"
                android:gravity="center"
                android:inputType="number|phone"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="163dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="280dp"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:text="@string/select_room"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />


            <Spinner
                android:id="@+id/roomSelection"
                android:layout_width="345dp"
                android:layout_height="69dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="340dp"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="440dp"
                android:fontFamily="@font/amarante"
                android:paddingLeft="20dp"
                android:text="@string/select_date_and_time"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed1"
                android:layout_width="154dp"
                android:layout_height="65dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="183dp"
                android:layout_marginTop="490dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="30dp"
                android:width="300dp"
                android:background="@drawable/rounded_corner"
                android:clickable="true"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:hint="@string/date"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed2"
                android:layout_width="181dp"
                android:layout_height="66dp"
                android:layout_marginStart="220dp"
                android:layout_marginLeft="193dp"
                android:layout_marginTop="490dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="30dp"
                android:width="480dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:hint="@string/time"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/submit"
                android:layout_width="184dp"
                android:layout_height="86dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="590dp"
                android:layout_marginEnd="119dp"
                android:layout_marginRight="119dp"
                android:fontFamily="@font/emilys_candy"
                android:text="@string/book_now"
                android:textSize="20sp" />
        </RelativeLayout>

    </LinearLayout>
    <RelativeLayout
        android:background="@color/white"
        android:layout_gravity="start"
        android:layout_height="match_parent"
        android:layout_width="300dp">

        <include layout="@layout/main_nav_drawer" />
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>